Gradle to include subproject dependencies espeak and mbrola for Windows